--- a/Web/joinForm.html
+++ b/Web/joinForm.html
@@ -115,8 +115,8 @@ function addresspopup()
   <main>
   <div class="col-lg-12">
     <div class="pt-3 text-center">
-    	<h3>회원 가입</h3>
-			<img class="d-block mx-auto mb-4" src="resource/join2.png" alt="" width="128" height="128">
+    	<h3 class="my-5">회원 가입</h3>
+			<!-- <img class="d-block mx-auto mb-4" src="resource/join2.png" alt="" width="128" height="128"> -->
     </div>
 
         <h4 class="mb-2" style=color:#9669f6>정보 입력</h4>
