- membervo -> uservo 변경, inputform 추가 - 기타 페이지 수정 - relation에 userid 추가 - login logout main modify servlet 추가

--- a/Web/loginForm.html
+++ b/Web/loginForm.html
@@ -48,28 +48,29 @@
 	<form class="needs-validation" action="LoginServlet" method="post" novalidate>
 		<h1 style="color: white">로그인 페이지</h1>
 		<img class="mb-4" src="resource/logo.png" alt="" width="256" height="256">
-	<div>
-		<label for="inputID" class="visually-hidden"></label>
-	    <input type="text" id="inputID" class="form-control" placeholder="ID를 입력해 주세요" size="10" required autofocus>
-	    <div class="invalid-feedback">
-                	ID를 입력해 주세요.
-        </div>
-    </div>
-    <div>
-	    <label for="inputPassword" class="visually-hidden">Password</label>
-	    <input type="password" id="inputPassword" class="form-control" placeholder="PW를 입력해 주세요" size="10" required>
-	    <div class="invalid-feedback">
-                	비밀번호를 입력해 주세요.
-        </div>
-	</div>
-	    <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+		<div>
+			<label for="id" class="visually-hidden"></label>
+		    <input type="text" id="id" name="id" class="form-control" placeholder="ID를 입력해 주세요" size="10" required autofocus>
+		    <div class="invalid-feedback">
+	                	ID를 입력해 주세요.
+	        </div>
+	    </div>
+	    
+	    <div>
+		    <label for="pw" class="visually-hidden">Password</label>
+		    <input type="password" id="pw" name="pw" class="form-control" placeholder="PW를 입력해 주세요" size="10" required>
+		    <div class="invalid-feedback">
+	                	비밀번호를 입력해 주세요.
+	        </div>
+		</div>
+    	<button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
     </form>
 	    
    	<div class="mt-4">
    	</div>
 	<div class="row g-3">
 		<div class="col-sm-6">
-			<form action="joinForm.jsp" method="get">
+			<form action="JoinServlet" method="get">
 				<button class="w-100 btn btn-md btn-primary" type="submit">회원 가입</button>
 			</form>
 		</div>
